cfn-template.yaml
Parameters:
  MyUsername:
    Type: String
    Default: admin
  MyIPAddressCIDR:
    Type: String
    NoEcho: True
  MyAccountNumber:
    Type: String
    NoEcho: True
  DBUsername:
    Type: String
    NoEcho: True
  DBPassword:
    Type: String
    NoEcho: True
  DBName:
    Type: String
    NoEcho: True
    Default: "postgres"
Resources:
  EC2VPC:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Delete"
    Properties:
      CidrBlock: "10.16.0.0/24"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: true
      Tags:
      - Value: "capstone-vpc"
        Key: "Name"
  EC2RouteH2:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Delete"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway1"
      RouteTableId:
        Ref: "EC2RouteTablePrivate1"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2SubnetPrivate2:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    DependsOn: VpcCidrBlockIpv6
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use1-az6"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.16.0.192/26"
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt 'EC2VPC.Ipv6CidrBlocks'], 256, 64]]
      Ipv6Native: false
      Tags:
      - Value: "capstone-subnet-private2-us-east-1b"
        Key: "Name"
  IAMRoleRdsmonitoringrole:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Delete"
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole"
      MaxSessionDuration: 3600
      RoleName: "rds-monitoring-role"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "monitoring.rds.amazonaws.com"
          Sid: ""
  EC2VPCEndpointPc:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.ssm"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-ssm"
        Key: "Name"
  IAMManagedPolicyPolicyCapstoneLogsCreateLogGroupPolicy:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::IAM::ManagedPolicy"
    DeletionPolicy: "Delete"
    Properties:
      ManagedPolicyName: "CapstoneLogsCreateLogGroupPolicy"
      Path: "/"
      Description: ""
      Groups: []
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Resource: "*"
          Action:
          - "logs:CreateLogGroup"
          Effect: "Allow"
          Sid: "VisualEditor0"
      Users: []
  IAMRoleCapstoneECSTaskLaunchRole:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Delete"
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - !Sub "arn:aws:iam::${MyAccountNumber}:policy/GetParameterSecrets"
      - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
      - !Sub "arn:aws:iam::${MyAccountNumber}:policy/CapstoneLogsCreateLogGroupPolicy"
      MaxSessionDuration: 3600
      RoleName: "CapstoneECSTaskLaunchRole"
      Description: "Allows ECS tasks to get parameters from Parameter Store and to\
        \ authorize and pull container images from ECR."
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "ecs-tasks.amazonaws.com"
          Sid: ""
    DependsOn:
      - IAMManagedPolicyPolicyGetParameterSecrets
      - IAMManagedPolicyPolicyCapstoneLogsCreateLogGroupPolicy
  EC2SecurityGroupRDSECS1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Security group attached to capstone-db to allow EC2 instances\
        \ with specific security groups attached to connect to the database. Modification\
        \ could lead to connection loss."
      GroupName: "rds-ec2-1"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        Description: "Rule to allow connections from EC2 instances with EC2SecurityGroupECSRDS1\
          \ attached"
        FromPort: 5432
        SourceSecurityGroupId:
          Fn::GetAtt:
            - "EC2SecurityGroupECSRDS1"
            - "GroupId"
        ToPort: 5432
        SourceSecurityGroupOwnerId: !Ref MyAccountNumber
  EC2NatGateway1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Delete"
    Properties:
      ConnectivityType: "public"
      AllocationId:
        Fn::GetAtt:
        - "EC2EIP3422516571"
        - "AllocationId"
      SubnetId:
        Ref: "EC2SubnetPublic1"
      Tags:
      - Value: "capstone-nat-public1-us-east-1a"
        Key: "Name"
  EC2SubnetPrivate1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    DependsOn: VpcCidrBlockIpv6
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.16.0.128/26"
      Ipv6Native: false
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt 'EC2VPC.Ipv6CidrBlocks'], 256, 64]]
      Ipv6Native: false
      Tags:
      - Value: "capstone-subnet-private1-us-east-1a"
        Key: "Name"
  EC2NatGateway2:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Delete"
    Properties:
      ConnectivityType: "public"
      AllocationId:
        Fn::GetAtt:
        - "EC2EIP132195827"
        - "AllocationId"
      SubnetId:
        Ref: "EC2SubnetPublic2"
      Tags:
      - Value: "capstone-nat-public2-us-east-1b"
        Key: "Name"
  EC2NetworkAcl:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Delete"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      Tags: []
  MyInboundNACLEntryRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref EC2NetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      CidrBlock: 0.0.0.0/0 
      PortRange:
        From: -1
        To: -1
      Egress: false
  MyInboundNACLEntryRuleIVP6:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref EC2NetworkAcl
      RuleNumber: 101
      Protocol: -1
      RuleAction: allow
      Ipv6CidrBlock: ::/0
      PortRange:
        From: -1
        To: -1
      Egress: false
  MyOutboundNACLEntryRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref EC2NetworkAcl
      RuleNumber: 110
      Protocol: -1 
      RuleAction: allow
      CidrBlock: 0.0.0.0/0 
      PortRange:
        From: -1
        To: -1
      Egress: true  
  MyOutboundNACLEntryRuleIVP6:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref EC2NetworkAcl
      RuleNumber: 111
      Protocol: -1 
      RuleAction: allow
      Ipv6CidrBlock: ::/0 
      PortRange:
        From: -1
        To: -1
      Egress: true
  MyPrivateSubnet1NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref EC2SubnetPrivate1
      NetworkAclId: !Ref EC2NetworkAcl
  MyPrivateSubnet2NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref EC2SubnetPrivate2
      NetworkAclId: !Ref EC2NetworkAcl
  MyPublicSubnet1NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref EC2SubnetPublic1
      NetworkAclId: !Ref EC2NetworkAcl
  MyPublicSubnet2NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref EC2SubnetPublic2
      NetworkAclId: !Ref EC2NetworkAcl
  NewKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: EC2BastionKeyPair
  EC2Instance:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Delete"
    Properties:
      Tenancy: "default"
      KeyName: !Ref NewKeyPair
      BlockDeviceMappings:
      - Ebs:
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      AvailabilityZone: "us-east-1a"
      NetworkInterfaces:
        - DeviceIndex: "0"
          AssociatePublicIpAddress: "true"
          SubnetId:
            "Ref": "EC2SubnetPublic1"
          GroupSet:
            - !Ref EC2SecurityGroupUserBastion
            - !Ref EC2SecurityGroupECSRDS1
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      EbsOptimized: false
      DisableApiTermination: false
      SourceDestCheck: true
      VpcId: !Ref EC2VPC
      ImageId: "ami-02457590d33d576c3"
      InstanceType: "t2.micro"
      Monitoring: false
      Tags:
      - Value: "ec2-bastion"
        Key: "Name"
  EC2SecurityGroupCapstoneRDS:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Security Group on the RDS instance"
      GroupName: "capstone-rds-sg"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: !Ref MyIPAddressCIDR
        IpProtocol: "tcp"
        FromPort: 5432
        ToPort: 5432
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  ALBTargetGroup:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Delete"
    DependsOn:
    - EC2SubnetPrivate1
    - EC2SubnetPrivate2
    Properties:
      Name: ALBTargetGroup
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 60
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 8000
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 3
      HealthCheckTimeoutSeconds: 5
      VpcId:
        Ref: "EC2VPC"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "ip"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags: []
  EC2Route:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Delete"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway2"
      RouteTableId:
        Ref: "EC2RouteTablePrivate2"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2SubnetRouteTableAssociationEn:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTablePrivate2"
      SubnetId:
        Ref: "EC2SubnetPrivate2"
  EC2RouteTablePublic1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Delete"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      Tags:
      - Value: "capstone-rtb-public"
        Key: "Name"
  EC2RoutePublicToIGW:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Delete"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTablePublic1"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: 
        Ref: EC2InternetGateway
  EC2VPCEndpointXB:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.kms"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-kms"
        Key: "Name"
  EC2VPCEndpointWV:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.logs"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-logs"
        Key: "Name"
  RDSDBInstance:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::RDS::DBInstance"
    DeletionPolicy: "Delete"
    DependsOn:
    - EC2SubnetPrivate1
    - EC2SubnetPrivate2
    - RDSDBSubnetGroupCapstonedbsubnetgroup
    Properties:
      DatabaseInsightsMode: "standard"
      StorageEncrypted: true
      AssociatedRoles: []
      Port: "5432"
      ProcessorFeatures: []
      PreferredBackupWindow: "07:06-07:36"
      MonitoringInterval: 0
      DBParameterGroupName: "default.postgres16"
      NetworkType: "IPV4"
      DedicatedLogVolume: false
      CopyTagsToSnapshot: true
      MultiAZ: false
      Engine: "postgres"
      Tags: []
      EngineLifecycleSupport: "open-source-rds-extended-support-disabled"
      LicenseModel: "postgresql-license"
      EngineVersion: "16.9"
      StorageType: "gp3"
      DBInstanceClass: "db.t4g.micro"
      PerformanceInsightsRetentionPeriod: 7
      AvailabilityZone: "us-east-1a"
      OptionGroupName: "default:postgres-16"
      PreferredMaintenanceWindow: "tue:03:19-tue:03:49"
      EnablePerformanceInsights: true
      AutoMinorVersionUpgrade: true
      DBSubnetGroupName: "capstone-db-subnet-group"
      DeletionProtection: false
      DBInstanceIdentifier: "capstone-db"
      AllocatedStorage: "20"
      CACertificateIdentifier: "rds-ca-rsa2048-g1"
      ManageMasterUserPassword: false
      MasterUserSecret: {}
      VPCSecurityGroups:
      - Fn::GetAtt:
        - "EC2SecurityGroupRDSECS1"
        - "GroupId"
      - Fn::GetAtt:
        - "EC2SecurityGroupCapstoneRDS"
        - "GroupId"
      DBSecurityGroups: []
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MaxAllocatedStorage: 1000
      DBName: !Ref DBName
      EnableIAMDatabaseAuthentication: true
      PubliclyAccessible: false
      BackupRetentionPeriod: 0
      EnableCloudwatchLogsExports: []
  EC2SubnetPublic1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    DependsOn: VpcCidrBlockIpv6
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.16.0.0/26"
      Ipv6Native: false
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Select [3, !Cidr [!Select [0, !GetAtt 'EC2VPC.Ipv6CidrBlocks'], 256, 64]]
      Ipv6Native: false
      Tags:
      - Value: "capstone-subnet-public1-us-east-1a"
        Key: "Name"
  MyDHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainNameServers:
        - AmazonProvidedDNS
      DomainName: !Sub "${AWS::Region}.compute.internal"
      Tags:
        - Key: Name
          Value: MyDHCPOptionsSet
  MyVPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref EC2VPC
      DhcpOptionsId: !Ref MyDHCPOptions
  EC2SecurityGroupSubnetVPCEndpoint:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Allows traffic to the VPC Endpoint from the private subnets\
        \ in the VPC CIDR block"
      GroupName: "capstone-subnet-to-vpc-endpoint-sg"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: "10.16.0.128/25"
        IpProtocol: "tcp"
        Description: "Image Pull Ingress HTTP"
        FromPort: 80
        ToPort: 80
      - CidrIp: "10.16.0.128/25"
        IpProtocol: "tcp"
        Description: "DNSTCP"
        FromPort: 53
        ToPort: 53
      - CidrIp: "10.16.0.128/25"
        IpProtocol: "udp"
        Description: "DNSUDP"
        FromPort: 53
        ToPort: 53
      - CidrIp: "10.16.0.128/25"
        IpProtocol: "tcp"
        Description: "Image Pull Ingress HTTPS"
        FromPort: 443
        ToPort: 443
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: CapstoneFargateCluster
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
        - CapacityProvider: FARGATE_SPOT
          Weight: 1
      Configuration:
        ExecuteCommandConfiguration:
          Logging: DEFAULT
  ECSService:
    Type: 'AWS::ECS::Service'
    DependsOn:
    - ECSTaskDefinition
    - ECSCluster
    - ALBCapstone
    Properties:
      ServiceName: capstone-fargate-service
      Cluster: !Ref ECSCluster
      DesiredCount: 1
      LoadBalancers:
        - ContainerName: "fargate-app"
          ContainerPort: 8000
          TargetGroupArn: !Ref ALBTargetGroup
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref EC2SecurityGroupECSRDS1
          Subnets:
            - !Ref EC2SubnetPrivate1
            - !Ref EC2SubnetPrivate2
      TaskDefinition: !Ref ECSTaskDefinition
  ECSTaskDefinition:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::ECS::TaskDefinition"
    DeletionPolicy: "Delete"
    DependsOn:
    - ALBCapstone
    Properties:
      ExecutionRoleArn:
        Fn::GetAtt:
        - "IAMRoleCapstoneECSTaskLaunchRole"
        - "Arn"
      Volumes: []
      InferenceAccelerators: []
      Memory: "512"
      PlacementConstraints: []
      ContainerDefinitions:
      - ExtraHosts: []
        Secrets:
        - ValueFrom: !Sub "arn:aws:ssm:us-east-1:${MyAccountNumber}:parameter/DBUsername"
          Name: "DBUsername"
        - ValueFrom: !Sub "arn:aws:ssm:us-east-1:${MyAccountNumber}:parameter/DBPassword"
          Name: "DBPassword"
        - ValueFrom: !Sub "arn:aws:ssm:us-east-1:${MyAccountNumber}:parameter/DATABASE_URL"
          Name: "DATABASE_URL"
        - ValueFrom: !Sub "arn:aws:ssm:us-east-1:${MyAccountNumber}:parameter/EXCITED"
          Name: "EXCITED"
        VolumesFrom: []
        Cpu: 0
        EntryPoint: []
        DnsServers: []
        Image: !Sub "${MyAccountNumber}.dkr.ecr.us-east-1.amazonaws.com/capstone-repository:latest"
        Essential: true
        LogConfiguration:
          SecretOptions: []
          Options:
            awslogs-group: "awslogs-capstone"
            awslogs-create-group: "true"
            awslogs-region: "us-east-1"
            awslogs-stream-prefix: "awslogs-capstone-stream"
          LogDriver: "awslogs"
        ResourceRequirements: []
        EnvironmentFiles: []
        Name: "fargate-app"
        MountPoints: []
        DependsOn: []
        DockerLabels: {}
        PortMappings:
        - ContainerPort: 8000
          Protocol: "tcp"
          HostPort: 8000
        DockerSecurityOptions: []
        SystemControls: []
        Command: []
        DnsSearchDomains: []
        Environment: []
        Links: []
        CredentialSpecs: []
        Ulimits: []
      Family: "capstone-fargate"
      Cpu: "256"
      RequiresCompatibilities:
      - "FARGATE"
      NetworkMode: "awsvpc"
      Tags: []
  EC2InternetGateway:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Delete"
    Properties:
      Tags:
      - Value: "capstone-igw"
        Key: "Name"
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref EC2InternetGateway
      VpcId: !Ref EC2VPC
  EC2VPCEndpointECRDKR:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.ecr.dkr"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-ecr"
        Key: "Name"
  EC2SecurityGroupECSRDS1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Security group attached to instances to securely connect\
        \ to capstone-db. Modification could lead to connection loss."
      GroupName: "ec2-rds-1"
      VpcId:
        Ref: "EC2VPC"
  EC2SecurityGroupEgressECSRDS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroupECSRDS1
      IpProtocol: "tcp"
      DestinationSecurityGroupId: !Ref EC2SecurityGroupRDSECS1
      Description: "Rule to allow connections to capstone-db from any ECS tasks\
        \ this security group is attached to"
      FromPort: 5432
      ToPort: 5432
  EC2SecurityGroupEgressECSInt:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroupECSRDS1
      Description: "Rule to allow connections to Amazon Services over VPCE Private DNS"
      CidrIp: "0.0.0.0/0"
      IpProtocol: "tcp"
      FromPort: 443
      ToPort: 443
  EC2SecurityGroupEgressECSVPCE:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroupECSRDS1
      Description: "Rule to allow connections from ECS tasks to VPC Endpoints in subnet"
      IpProtocol: "tcp"
      DestinationSecurityGroupId: !Ref "EC2SecurityGroupSubnetVPCEndpoint"
      FromPort: 443
      ToPort: 443
  EC2SecurityGroupIngressALBECS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EC2SecurityGroupECSRDS1
      SourceSecurityGroupId: !Ref EC2SecurityGroupCapstoneALB
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      SourceSecurityGroupOwnerId: !Ref MyAccountNumber      
  EC2SubnetRouteTableAssociation:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTablePublic1"
      SubnetId:
        Ref: "EC2SubnetPublic1"
  LogsLogGroupAwslogscapstone:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::Logs::LogGroup"
    DeletionPolicy: "Delete"
    Properties:
      FieldIndexPolicies: []
      LogGroupClass: "STANDARD"
      RetentionInDays: 7
      LogGroupName: "awslogs-capstone"
      DataProtectionPolicy: {}
  EC2VPCEndpoint:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.ecr.api"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-ecr-api"
        Key: "Name"
  EC2SecurityGroupUserBastion:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "ec2-bastion-sg created 2025-06-06T05:29:13.246Z"
      GroupName: "ec2-bastion-sg"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: !Ref MyIPAddressCIDR
        IpProtocol: "tcp"
        Description: "sg-rule-admin-inbound-ssh"
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2VPCEndpointVj:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: false
      IpAddressType: "not-specified"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "not-specified"
      ResourceConfigurationArn: ""
      SecurityGroupIds: []
      SubnetIds: []
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds:
      - Ref: "EC2RouteTablePrivate1"
      - Ref: "EC2RouteTablePrivate2"
      ServiceName: "com.amazonaws.us-east-1.s3"
      PolicyDocument:
        Version: "2008-10-17"
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Gateway"
      Tags:
      - Value: "capstone-vpce-s3gw"
        Key: "Name"
  EC2SubnetPublic2:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    DependsOn: VpcCidrBlockIpv6
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use1-az6"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.16.0.64/26"
      Ipv6Native: false
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Select [4, !Cidr [!Select [0, !GetAtt 'EC2VPC.Ipv6CidrBlocks'], 256, 64]]
      Ipv6Native: false
      Tags:
      - Value: "capstone-subnet-public2-us-east-1b"
        Key: "Name"
  EC2SecurityGroupCapstoneALB:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Allows inbound traffic from internet"
      GroupName: "CapstoneALBSG"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      - CidrIpv6: "::/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
  EC2SecurityGroupEgressALBECS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroupCapstoneALB
      DestinationSecurityGroupId: !Ref EC2SecurityGroupECSRDS1
      IpProtocol: "tcp"
      Description: "Allow traffic to flow to ecs service"
      FromPort: 8000
      ToPort: 8000
  ALBCapstone:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Delete"
    DependsOn:
    - EC2SubnetPublic1
    - EC2SubnetPublic2
    Properties:
      Name: ALBCapstone
      IpAddressType: "ipv4"
      SecurityGroups:
      - !Ref EC2SecurityGroupCapstoneALB
      LoadBalancerAttributes:
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "false"
        Key: "zonal_shift.config.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Type: "application"
      Scheme: "internet-facing"
      EnablePrefixForIpv6SourceNat: "off"
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: ""
      SubnetMappings:
      - SubnetId:
          Ref: "EC2SubnetPublic1"
      - SubnetId:
          Ref: "EC2SubnetPublic2"
      Tags:
        - Key: Name
          Value: ALBCapstone
  EC2EIP132195827:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::EIP"
    DeletionPolicy: "Delete"
    Properties:
      PublicIpv4Pool: "amazon"
      Domain: "vpc"
      Tags:
      - Value: "capstone-eip-us-east-1b"
        Key: "Name"
      NetworkBorderGroup: "us-east-1"
  EC2VPCEndpointFG:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.ssmmessages"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-ssmmessages"
        Key: "Name"
  EC2EIP3422516571:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::EIP"
    DeletionPolicy: "Delete"
    Properties:
      PublicIpv4Pool: "amazon"
      Domain: "vpc"
      Tags:
      - Value: "capstone-eip-us-east-1a"
        Key: "Name"
      NetworkBorderGroup: "us-east-1"
  EC2RouteTablePrivate1:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Delete"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      Tags:
      - Value: "capstone-rtb-private1-us-east-1a"
        Key: "Name"
  EC2SubnetRouteTableAssociationXh:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTablePrivate1"
      SubnetId:
        Ref: "EC2SubnetPrivate1"
  EC2SubnetRouteTableAssociationLY:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTablePublic1"
      SubnetId:
        Ref: "EC2SubnetPublic2"
  EC2VPCEndpointN6:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      PrivateDnsEnabled: true
      IpAddressType: "ipv4"
      ServiceRegion: "us-east-1"
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: "NotSpecified"
        DnsRecordIpType: "ipv4"
      ResourceConfigurationArn: ""
      SecurityGroupIds:
      - !Ref EC2SecurityGroupSubnetVPCEndpoint
      SubnetIds:
      - Ref: "EC2SubnetPrivate2"
      - Ref: "EC2SubnetPrivate1"
      ServiceNetworkArn: ""
      VpcId:
        Ref: "EC2VPC"
      RouteTableIds: []
      ServiceName: "com.amazonaws.us-east-1.secretsmanager"
      PolicyDocument:
        Statement:
        - Resource: "*"
          Action: "*"
          Effect: "Allow"
          Principal: "*"
      VpcEndpointType: "Interface"
      Tags:
      - Value: "capstone-vpce-secrets-mgr"
        Key: "Name"
  ALBListener:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Delete"
    Properties:
      MutualAuthentication:
        Mode: "off"
      ListenerAttributes:
      - Value: ""
        Key: "routing.http.request.x_amzn_tls_cipher_suite.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_serial_number.header_name"
      - Value: ""
        Key: "routing.http.response.access_control_allow_origin.header_value"
      - Value: ""
        Key: "routing.http.response.content_security_policy.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_leaf.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_tls_version.header_name"
      - Value: "true"
        Key: "routing.http.response.server.enabled"
      - Value: ""
        Key: "routing.http.response.access_control_allow_headers.header_value"
      - Value: ""
        Key: "routing.http.response.x_frame_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_methods.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_issuer.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_validity.header_name"
      - Value: ""
        Key: "routing.http.response.access_control_allow_credentials.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_subject.header_name"
      - Value: ""
        Key: "routing.http.response.x_content_type_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_expose_headers.header_value"
      - Value: ""
        Key: "routing.http.response.strict_transport_security.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_max_age.header_value"
      SslPolicy: "ELBSecurityPolicy-TLS13-1-2-Res-2021-06"
      LoadBalancerArn:
        Ref: "ALBCapstone"
      DefaultActions:
      - TargetGroupArn:
          Ref: "ALBTargetGroup"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
          TargetGroups:
          - TargetGroupArn:
              Ref: "ALBTargetGroup"
            Weight: 1
      Port: 443
      Certificates:
      - CertificateArn: !Sub "arn:aws:acm:us-east-1:${MyAccountNumber}:certificate/feb0d556-b1d6-4b39-8287-78e95533a690"
      Protocol: "HTTPS"
  VpcCidrBlockIpv6:
    Type: "AWS::EC2::VPCCidrBlock"
    Properties:
      VpcId: !Ref "EC2VPC"
      AmazonProvidedIpv6CidrBlock: true
  EC2RouteTablePrivate2:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Delete"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      Tags:
      - Value: "capstone-rtb-private2-us-east-1b"
        Key: "Name"
  IAMManagedPolicyPolicyCapstoneECRAccessPolicy:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::IAM::ManagedPolicy"
    DeletionPolicy: "Delete"
    Properties:
      ManagedPolicyName: "CapstoneECRAccessPolicy"
      Path: "/"
      Description: "Allows role to get an auth token for ECR and pull an image from\
        \ a repository."
      Groups: []
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Resource: !Sub "arn:aws:ecr:us-east-1:${MyAccountNumber}:repository/*"
          Action:
          - "ecr:GetDownloadUrlForLayer"
          - "ecr:BatchGetImage"
          - "ecr:BatchCheckLayerAvailability"
          Effect: "Allow"
          Sid: "VisualEditor0"
        - Resource: "*"
          Action: "ecr:GetAuthorizationToken"
          Effect: "Allow"
          Sid: "VisualEditor1"
      Roles: []
      Users: []
  IAMManagedPolicyPolicyGetParameterSecrets:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::IAM::ManagedPolicy"
    DeletionPolicy: "Delete"
    Properties:
      ManagedPolicyName: "GetParameterSecrets"
      Path: "/"
      Description: "Allows a service to get and decrypt secure parameters from Secrets\
        \ Manager and Systems Manager"
      Groups: []
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Resource:
          - !Sub "arn:aws:kms:us-east-1:${MyAccountNumber}:key/*"
          - !Sub "arn:aws:secretsmanager:us-east-1:${MyAccountNumber}:secret:*"
          - !Sub "arn:aws:ssm:us-east-1:${MyAccountNumber}:parameter/*"
          Action:
          - "kms:Decrypt"
          - "secretsmanager:GetSecretValue"
          - "ssm:GetParameters"
          Effect: "Allow"
          Sid: "VisualEditor0"
      Users: []
  RDSDBSubnetGroupCapstonedbsubnetgroup:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::RDS::DBSubnetGroup"
    DeletionPolicy: "Delete"
    Properties:
      DBSubnetGroupDescription: "Subnet Group for PostgresQL DB"
      SubnetIds:
      - Ref: "EC2SubnetPrivate1"
      - Ref: "EC2SubnetPrivate2"
      DBSubnetGroupName: "capstone-db-subnet-group"
